# aomigo-demo

./: INTEGRATIONS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1761526342162-26412a58f2c168.mjs
backend/: .env.example  README.md  aomigo-76460-firebase-adminsdk-fbsvc-fa0c37f5fd.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: auth.py  profiles.py  reviews.py  router.py  sessions.py  storage.py  submissions.py  topics.py  waitlist.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: supabase.py
backend/app/repositories/: accounts.py  profiles.py  reviews.py  submissions.py  teaching_sessions.py  topics.py  waitlist.py
backend/app/schemas/: auth.py  profiles.py  reviews.py  submissions.py  teaching.py  topics.py  waitlist.py
backend/app/services/: auth.py  profiles.py  reviews.py  storage.py  submissions.py  teaching.py  topics.py  waitlist.py
src/: App.tsx  index.css  main.tsx
src/components/: FollowUpQuestion.tsx  ForgettingCurve.tsx  ImageUploader.tsx  Layout.tsx  PetAvatar.tsx  PostCreationModal.tsx  TutorialModal.tsx  VoiceRecorder.tsx
src/hooks/: useEvents.ts  usePetStats.ts  useReviews.ts  useStore.ts  useStore.tsx
src/lib/: cactus.ts  config.ts  firebase.ts  forgettingCurve.ts  i18n.ts  lingo.ts  ocr.ts  openai.ts  s2.ts  stackAuth.ts  supabase.ts
src/pages/: Auth.tsx  Community.tsx  Home.tsx  Landing.tsx  Messages.tsx  Review.tsx  Settings.tsx  Shop.tsx  Summary.tsx  Teach.tsx
src/types/: index.ts
(+21 files in other folders)
