[tool.poetry]
name = "aomigo-backend"
version = "0.1.0"
description = "FastAPI service powering AOMIGO"
authors = ["AOMIGO Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.9.0"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.0.1"
firebase-admin = "^6.5.0"
supabase = "^2.4.0"
httpx = { version = "^0.27.0", extras = ["http2"] }
asyncpg = "^0.29.0"
structlog = "^24.1.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.7"
ruff = "^0.6.9"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"